@@ -1,6 +1,5 @@
 1.0beta11:
 
- - make graphs work under SuSe
  - check user permissions (how to make only one host accessible?)
  - mess with user groups when running under root
  - support for PREFIX/zabbix/etc (configuration files)
